--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -96,6 +96,20 @@ header
 .menuCheck[type=checkbox]:checked ~ .menuDesplegado
     display: flex
 
+.menu1
+  display: flex
+.menuCheck1[type=checkbox]
+  display: none
+.menuDesplegado1
+  display: none
+  flex-direction: column
+  position: absolute
+  margin-top: 5%
+  background-color: #262C3A
+  padding: 10px
+  font-family: mina
+.menuCheck1[type=checkbox]:checked ~ .menuDesplegado1
+    display: flex
 //Footer
 footer
   padding: 10px
