--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -411,6 +411,17 @@ textarea
   width: 100%
   align-items: center
   flex-direction: column
+  label
+    width: 100%
+    display: flex
+    align-items: center
+    justify-content: center
+    flex-wrap: wrap
+    input
+      width: 55%
+    p
+      width: 100%
+      text-align: center
 .logoRyMs
   width: 50%
   margin: auto
@@ -439,7 +450,10 @@ textarea
     width: 20%
   p
     width: 80%
-
+.errorRegister
+  color: red
+.bienRegister
+  display: none
 //UserPage
 .userPage
   display: flex
