--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -47,6 +47,13 @@ header
   a:hover
     color: greenyellow
     transition: color 350ms ease
+  li
+    color: white
+    transition: color 350ms ease
+  li:hover
+    color: greenyellow
+    transition: color 350ms ease
+
 
 .iconsHeader
   display: flex
@@ -110,6 +117,12 @@ header
   font-family: mina
 .menuCheck1[type=checkbox]:checked ~ .menuDesplegado1
     display: flex
+.navLoged
+  width: 80%
+  display: flex
+  align-items: center
+  justify-content: center
+
 //Footer
 footer
   padding: 10px
@@ -433,6 +446,8 @@ textarea
   font-size: 1.3rem
   font-family: mina
   color: white
+.sesion::placeholder
+  color: white
 .boton
   width: 15%
   height: 3vh
@@ -454,6 +469,13 @@ textarea
   color: red
 .bienRegister
   display: none
+.botonLogin
+  width: 50px
+  border-radius: 10px
+  background-color: darkgray
+.botonLogin:hover
+  background-color: gray
+
 //UserPage
 .userPage
   display: flex
@@ -464,6 +486,37 @@ textarea
   font-size: 25px
   color: white
   text-align: center
+.centramos
+  display: flex
+  flex-wrap: wrap
+.liked
+  width: 33%
+  padding: 10px
+.likedCharacters
+  width: 100%
+  align-items: center
+  border-radius: 20px
+  justify-content: space-around
+  margin: 10px
+  display: flex
+  height: 30vh
+  background-color: #70707080
+  div
+    margin: 20px
+    width: 50%
+    height: 100%
+    display: flex
+    flex-direction: column
+    color: white
+    font-family: mina
+    .status
+      width: 100%
+      span
+        font-size: 20px
+        width: 100%
+    .morinfo
+      width: 100%
+      font-size: 17px
 
 //ERROR 404
 .Error
